# ChangeLog for games-action/openlierox
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Oct 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  +openlierox-0.57_beta8.ebuild:
  Version bump.

  10 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  openlierox-0.57_beta5.ebuild:
  Fixed some repoman reported errors.

  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  openlierox-0.57_beta5.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  15 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  -openlierox-0.57_beta3.ebuild, +openlierox-0.57_beta5.ebuild:
  Version bump (bug #164009)
