@@ -1,5 +1,3 @@
-DIST OpenLieroX_0.57_beta5.src.tar.bz2 44710556 RMD160 9ea2d4d979955069c3ff9ebe3c02b59de8da1c4c SHA1 14044c2f9a3119a6b5e9d8369816630721729fbd SHA256 9a70e828cbeb039ef6af32dd68e1817182147d860de97460ed6ca7071135de4a
 DIST OpenLieroX_0.57_beta8.src.tar.bz2 49121319 RMD160 0b4753e91cae2e9c70097721a1f691f2695d747e SHA1 e1b3a8366e8e163416214359a7fd25e9d172b4a9 SHA256 0dd9c624a5d6a804f354263327dd4052f3b4d464b90e318e6255ec12d70077a8
-EBUILD openlierox-0.57_beta5.ebuild 1725 RMD160 3af401573b5b1ed22d3a0927d34b9c267f1adf9a SHA1 de348bf80d4d5a78831a34ecf7245587ac3d91e0 SHA256 3338687e3316f73c15a8500d0da3ec9d65623db24bb301fc28779df6226352cd
-EBUILD openlierox-0.57_beta8.ebuild 1906 RMD160 e187c2ddface8ae48cedc99b81273c6a28be3fc6 SHA1 2e50dd0dff40dc68cc6f66c4f00ef55aab7e967a SHA256 b29408ba2fb66df3f8c004dbbbec7976f333f3aeee8dc403f827d42d020524b0
-MISC ChangeLog 642 RMD160 e169491a53fd7ae763ab3f2120ab95416de82cf3 SHA1 6fcc20d39ac91e6c0a5f8558260ebe17620e9240 SHA256 954982369bbddaf8ee467603c4b529d0eb0ce6c3a7659a4b48a5ed8af4def939
+EBUILD openlierox-0.57_beta8.ebuild 1611 RMD160 70adb049f588d34687560feee94ec963036e20db SHA1 1706c5ab52c4755357225c3599a3e559a7dda1ea SHA256 e7fffbc5f616e9ac1fb6a628e64cda9bca30a9e63b026fe60a90bc22914a933b
+MISC ChangeLog 774 RMD160 9612cde6170152ee2589b6227d77bcbcbee9f656 SHA1 fc0e5b3c7b9753a41521512e001e25719e503b7e SHA256 5d4b4841c77a5d007b312e357f12ecfc5d80f04506922ff919f2c566ed5fbc65
